# ChangeLog for dev-python/dexml
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  31 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.3.ebuild:
  Keyworded amd64.

  21 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.1.ebuild,
  dexml-0.3.3.ebuild, dexml-0.3.4.ebuild:
  Added PYTHON_DEPEND setting.

  18 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.1.ebuild:
  Keyworded x86.

  18 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.1.ebuild:
  Keyworded amd64.

*dexml-0.3.4 (06 Mar 2010)

  06 Mar 2010; James Rowe <jnrowe@gmail.com> +dexml-0.3.4.ebuild:
  Version bump [8a2].

*dexml-0.3.3 (02 Mar 2010)

  02 Mar 2010; James Rowe <jnrowe@gmail.com> +dexml-0.3.3.ebuild:
  Version bump [534].

*dexml-0.3.1 (16 Feb 2010)

  16 Feb 2010; James Rowe <jnrowe@gmail.com> +dexml-0.3.1.ebuild,
  +metadata.xml:
  Initial ebuild, by me.
