@@ -1,18 +1,16 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST dexml-0.3.1.tar.gz 13731 RMD160 58cfcf56bf8f80155027a51c50f57114295727c2 SHA1 4f345f034913afbca38de1aab82bb3ee29d7e170 SHA256 2711bdac2bcc058c21744d95b648b9e3c59f9c795843c8cc36137d0863b0cafc
 DIST dexml-0.3.3.tar.gz 15426 RMD160 3e0577b2e223cce983be0dc0f8ccc40d4ae8f228 SHA1 786594a9df1dbb84090353ec95d2c523ab588c0b SHA256 899cfc20ff1aa621252b715694f0f986760ec45eca5ef4167aa5c4aa0de64fd9
 DIST dexml-0.3.4.tar.gz 16671 RMD160 78d9f284a6739240b1fedfcee9f56ec95572046d SHA1 75f39b50b23081daed53cd8614d363dac9cf78b4 SHA256 4d5ffab8a637402fcb0ac033152ef485946274c5f1c98f9ab51b579eb6e7c70c
-EBUILD dexml-0.3.1.ebuild 326 RMD160 eb48cc077749802021d0f5873ce4001117f7d76c SHA1 09df549cfd28ee3e1042caf577ede7f83f929777 SHA256 4c4c7029a1be1b860f221e55b0625eab0ecfd3baba2bf5106eac76e8cbd67174
-EBUILD dexml-0.3.3.ebuild 327 RMD160 71e0175b4479110366f95117f44ed4f6d7bd5309 SHA1 48289cc8021edd96911aaf0fc1065ecd351a95b1 SHA256 83c6091dc9c7311ffc14fc3290ca3afb085562b7d35f5124372bc0cb69ce0c78
+EBUILD dexml-0.3.3.ebuild 326 RMD160 eb48cc077749802021d0f5873ce4001117f7d76c SHA1 09df549cfd28ee3e1042caf577ede7f83f929777 SHA256 4c4c7029a1be1b860f221e55b0625eab0ecfd3baba2bf5106eac76e8cbd67174
 EBUILD dexml-0.3.4.ebuild 362 RMD160 a1fa9a480a5fd497dc23d9f2ead248e2761f8aa5 SHA1 b94be963c34221764ca9b987083baf6d5f4c2896 SHA256 2fa3eea53de1e9b746abf980e82698bacdc434ba33ba2a525450d1810c29d2e6
-MISC ChangeLog 880 RMD160 e932d2087bcd658fbe4a80b94962302268770816 SHA1 ccbb4e161ca0c0c7c652c9e5d9c7a6617e7b828a SHA256 20a8a00d4a14edf2de2562cdb73799a3e1c4f084624ce30f1d237eb5f2c31e27
+MISC ChangeLog 986 RMD160 2061693aec5907246856e94bb767627eb181ece4 SHA1 016cedcb6971535b9a2993dd543bdc2b3351a572 SHA256 f2ccd792e39e2aecf20d16733ee94e06a6ef3d45da1740bc6c91a67fe2953e88
 MISC metadata.xml 933 RMD160 59877581c854f3a3c3c7af8c892b00c703ed7ae5 SHA1 6e12ad1cb572fbd7f8a5d9c70a41f17c8a1df0b7 SHA256 ee51c12966c66e8c0733fbb6cc15a196703a9858229e52780a8b1f94e188397c
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAkuz2EIACgkQzJrj3cAXR0mZkwCfVzgjOT8WFaoq071sU8rc7+on
-CfEAoJZC1xEnXEotpvyQIikSKmEKC5u1
-=qfn4
+iEYEARECAAYFAkuz2oQACgkQzJrj3cAXR0nxIgCgtmCLPHt5ND4WrqKlxZJviXYq
+I/AAnR7SEEeRnilX/6cTeNoDY4KNXTCJ
+=pd3z
 -----END PGP SIGNATURE-----
