@@ -1,19 +1,0 @@
-# Copyright 1999-2010 Gentoo Foundation
-# Distributed under the terms of the GNU General Public License v2
-# $Header: $
-
-EAPI="2"
-PYTHON_DEPEND="*"
-SUPPORT_PYTHON_ABIS="1"
-
-inherit jnrowe-pypi
-
-DESCRIPTION="A dead-simple Object-XML mapper for Python"
-
-LICENSE="MIT"
-SLOT="0"
-KEYWORDS="amd64 x86"
-IUSE=""
-
-DEPEND=""
-RDEPEND=""
