@@ -1,22 +1,0 @@
->=app-admin/eselect-python-20091230 dev-lang/python
->=app-admin/eselect-python-20091230 dev-lang/python
-0
-http://pypi.python.org/packages/source/d/dexml/dexml-0.3.1.tar.gz
-
-http://pypi.python.org/pypi/dexml/
-MIT
-A dead-simple Object-XML mapper for Python
-amd64 x86
-distutils eutils jnrowe-pypi multilib portability python toolchain-funcs
-
-
-
-
-2
-
-compile install postinst postrm prepare
-
-
-
-
-
