@@ -1,4 +1,3 @@
-REM 2010-04-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/dexml-0.3.3 %a
 REM 2010-04-01 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 dev-python/wordish-1.0.2 %a
 REM 2010-04-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise amd64 sys-apps/zlibc-0.9k %a
 REM 2010-04-02 *1 +1 UNTIL 2038-01-19 MSG Stabilise x86 sys-apps/zlibc-0.9k %a
