@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  31 Mar 2010; James Rowe <jnrowe@gmail.com> -dexml-0.3.1.ebuild,
+  dexml-0.3.3.ebuild:
+  Keyworded x86.
+
   31 Mar 2010; James Rowe <jnrowe@gmail.com> dexml-0.3.3.ebuild:
   Keyworded amd64.
 
